add yuzva, upd schedule

--- a/app/schedule.html
+++ b/app/schedule.html
@@ -566,7 +566,8 @@
           </p>
         </li>
         <li class="second-stream">
-          <h3><span class="schedule-time">12:40</span><a href="speakers/irina-levina.html">Реалити шоу "Cкрам 2 - Построй свое приложение", или Сказ о том как мы всей командой тесты писали</a></h3>
+          <h3><span class="schedule-time">12:40</span><a href="speakers/irina-levina.html">Реалити шоу "Cкрам 2 -
+            Построй свое приложение", или Сказ о том как мы всей командой тесты писали</a></h3>
           <p class="text-sm">Irina Levina
             <small>| LeverX Group</small>
           </p>
@@ -575,12 +576,11 @@
           </p>
         </li>
         <li class="third-stream">
-          <h3><span class="schedule-time">12:40</span><a href="speakers/aliaksandr-adzerykha.html"> Front-end
-            development for Enterprise</a></h3>
-          <p class="text-sm">Aliaksandr Adzerykha
-            <small>| EPAM</small>
-          </p>
-          <p class="text-sm">30min | RU
+          <h3><span class="schedule-time">12:40</span><a href="speakers/dzianis-sheka.html">Panel Discussion: Technical
+            communities - what next?
+          </a></h3>
+          <p class="text-sm">Moderator: Dzianis Sheka</p>
+          <p class="text-sm">40min | RU
             <span class="talk-place">Blue Stage</span>
           </p>
         </li>
@@ -604,11 +604,12 @@
           </p>
         </li>
         <li class="third-stream">
-          <h3><span class="schedule-time">13:20</span><a href="speakers/dzianis-sheka.html">Panel Discussion: Technical
-            communities - what next?
-          </a></h3>
-          <p class="text-sm">Moderator: Dzianis Sheka</p>
-          <p class="text-sm">40min | RU
+          <h3><span class="schedule-time">13:20</span><a href="speakers/aliaksandr-adzerykha.html"> Front-end
+            development for Enterprise</a></h3>
+          <p class="text-sm">Aliaksandr Adzerykha
+            <small>| EPAM</small>
+          </p>
+          <p class="text-sm">30min | RU
             <span class="talk-place">Blue Stage</span>
           </p>
         </li>
@@ -636,8 +637,10 @@
           </p>
         </li>
         <li class="third-stream">
-          <h3><span class="schedule-time">15:30</span>Panel Discussion</h3>
-          <p class="text-sm"></p>
+          <h3><span class="schedule-time">15:30</span><a href="speakers/maksim-yuzva.html">Панельная дискуссия: Гайд по
+            front-end разработчику, патч 2019</a></h3>
+          <p class="text-sm">Moderator: Maksim Yuzva
+          </p>
           <p class="text-sm">30min | EN
             <span class="talk-place">Blue Stage</span>
           </p>
@@ -663,9 +666,11 @@
           </p>
         </li>
         <li class="third-stream">
-          <h3><span class="schedule-time">16:10</span>Panel Discussion</h3>
-          <p class="text-sm"></p>
-          <p class="text-sm">40min | EN
+          <h3><span class="schedule-time">15:30</span><a href="speakers/maksim-yuzva.html">Панельная дискуссия: Гайд по
+            front-end разработчику, патч 2019</a></h3>
+          <p class="text-sm">Moderator: Maksim Yuzva
+          </p>
+          <p class="text-sm">30min | EN
             <span class="talk-place">Blue Stage</span>
           </p>
         </li>
@@ -743,17 +748,6 @@
             <span class="talk-place">Red Stage</span>
           </p>
         </li>
-        <!--        <li class="second-stream">-->
-        <!--          <h3><span class="schedule-time">11:00</span><a href="speakers/vitali-lashchanka.html"> Fail Fast approach in-->
-        <!--            Frontend Development-->
-        <!--          </a></h3>-->
-        <!--          <p class="text-sm">Vitali Lashchanka-->
-        <!--            <small>| Evolution Gaming</small>-->
-        <!--          </p>-->
-        <!--          <p class="text-sm">30min | EN-->
-        <!--            <span class="talk-place">Green Stage</span>-->
-        <!--          </p>-->
-        <!--        </li>-->
         <li class="second-stream">
           <h3><span class="schedule-time">11:00</span><a href="speakers/pablo-birukov.html"> JavaScript that scales
           </a></h3>
@@ -794,7 +788,7 @@
           </p>
         </li>
         <li class="third-stream">
-          <h3><span class="schedule-time">11:00</span>Workshop. Part 2: <br><a href="speakers/shawn-wang.html">JAMStack
+          <h3><span class="schedule-time">11:40</span>Workshop. Part 2: <br><a href="speakers/shawn-wang.html">JAMStack
             Jumpstart: Gatsby + Netlify</a></h3>
           <p class="text-sm"></p>
           <p class="text-sm">3h | EN
@@ -826,7 +820,7 @@
           </p>
         </li>
         <li class="third-stream">
-          <h3><span class="schedule-time">11:00</span>Workshop. Part 3: <br><a href="speakers/shawn-wang.html">JAMStack
+          <h3><span class="schedule-time">12:40</span>Workshop. Part 3: <br><a href="speakers/shawn-wang.html">JAMStack
             Jumpstart: Gatsby + Netlify</a></h3>
           <p class="text-sm"></p>
           <p class="text-sm">3h | EN
@@ -855,10 +849,12 @@
           </p>
         </li>
         <li class="third-stream">
-          <h3><span class="schedule-time">11:00</span>Workshop. Part 4: <br><a href="speakers/shawn-wang.html">JAMStack
-            Jumpstart: Gatsby + Netlify</a></h3>
-          <p class="text-sm"></p>
-          <p class="text-sm">3h | EN
+          <h3><span class="schedule-time">13:20</span><a href="speakers/paul-yuhnovich.html"> A universal fusion of the
+            team</a></h3>
+          <p class="text-sm">Paul Yuhnovich
+            <small>| EPAM</small>
+          </p>
+          <p class="text-sm">30min | EN
             <span class="talk-place">Blue Stage</span>
           </p>
         </li>
@@ -886,16 +882,15 @@
           </p>
         </li>
         <li class="third-stream">
-          <h3><span class="schedule-time">11:00</span><a href="speakers/paul-yuhnovich.html"> A universal fusion of the
-            team</a></h3>
-          <p class="text-sm">Paul Yuhnovich
-            <small>| EPAM</small>
+          <h3><span class="schedule-time">15:30</span><a href="speakers/yan-ageenko.html">Дизайн-система на HTML/CSS</a>
+          </h3>
+          <p class="text-sm">Yan Ageenko
+            <small>| IT-Academy</small>
           </p>
-          <p class="text-sm">30min | EN
+          <p class="text-sm">40min | RU
             <span class="talk-place">Blue Stage</span>
           </p>
         </li>
-
         <li class="first-stream">
           <h3><span class="schedule-time">16:10</span><a href="speakers/alexander-gerasimov.html">"No Foul Play"
             Describing State with Dependently Typed FSMs</a></h3>
@@ -917,10 +912,10 @@
           </p>
         </li>
         <li class="third-stream">
-          <h3><span class="schedule-time">16:10</span><a href="speakers/yan-ageenko.html">Дизайн-система на HTML/CSS</a>
+          <h3><span class="schedule-time">16:10</span> TBD
           </h3>
-          <p class="text-sm">Yan Ageenko
-            <small>| IT-Academy</small>
+          <p class="text-sm">
+            <small>| </small>
           </p>
           <p class="text-sm">40min | RU
             <span class="talk-place">Blue Stage</span>
