--- a/app/schedule.html
+++ b/app/schedule.html
@@ -840,7 +840,7 @@
         </li>
         <li class="second-stream">
           <h3><span class="schedule-time">13:20</span><a href="speakers/artur-kenzhaev.html"> The Quest of the Styling
-            Graal</a></h3>
+            Grail</a></h3>
           <p class="text-sm">Artur Kenzhaev
             <small>| Yandex.Market</small>
           </p>
