add: turtle to travel partners

--- a/app/partners.html
+++ b/app/partners.html
@@ -245,6 +245,11 @@
             <img src="images/partners/logo-elp.svg" alt="elp logo">
           </a>
         </li>
+        <li>
+          <a target="_blank" href="https://www.turtle.ai/">
+            <img src="images/partners/logo-turtle.svg" alt="turtle logo">
+          </a>
+        </li>
       </ul>
 
       <h2>Info Partners</h2>
