upd: schedule for print mode

--- a/app/schedule.html
+++ b/app/schedule.html
@@ -153,6 +153,8 @@
 
       <!-- Mobile Day -->
 
+      <h2 class="for-print">Mobile People Day, 9 Aug</h2>
+
       <ul class="schedule mobile-people-day">
         <li>
           <h3><span class="schedule-time">9:00</span> Registration</h3>
@@ -358,6 +360,8 @@
 
       <!-- Design Day -->
 
+      <h2 class="for-print">Design Day, 9 Aug</h2>
+
       <ul class="schedule design-friday">
         <li>
           <h3><span class="schedule-time">9:00</span> Registration</h3>
@@ -477,6 +481,7 @@
       </ul>
 
       <!-- JS Day SAT-->
+      <h2 class="for-print">JavaScript/Front-end Day, 10 Aug</h2>
 
       <ul class="schedule first-day js-sat">
         <li>
@@ -732,6 +737,8 @@
       </ul>
 
       <!-- JS Day SUN-->
+      <h2 class="for-print">JavaScript/Front-end Day, 11 Aug</h2>
+
 
       <ul class="schedule second-day js-sun">
         <li>
@@ -951,7 +958,7 @@
     </div>
   </section>
 
-  <section>
+  <section class="no-print">
     <div class="content-lg">
       <h2>Tickets</h2>
       <div class="ticket-set">
