add: tut.by to info partners

--- a/app/schedule.html
+++ b/app/schedule.html
@@ -884,7 +884,7 @@
           <p class="text-sm">Ekaterina Prigara
             <small>| JetBrains</small>
           </p>
-          <p class="text-sm">30min | EN
+          <p class="text-sm">30min | RU
             <span class="talk-place">Green Stage</span>
           </p>
         </li>
