--- a/app/mobile.html
+++ b/app/mobile.html
@@ -697,6 +697,11 @@
       <h2>Info Partners</h2>
       <ul class="partner-list">
         <li>
+          <a target="_blank" href="https://www.tut.by/">
+            <img src="images/partners/logo-tutby.png" alt="tutby logo"/>
+          </a>
+        </li>
+        <li>
           <a target="_blank" href="https://dev.by">
             <img src="images/partners/dev-logo-bw.png" alt="DevBy logo"/>
           </a>
