add speaker: max yuzva

--- a/app/schedule.html
+++ b/app/schedule.html
@@ -851,7 +851,7 @@
           <p class="text-sm">Artur Kenzhaev
             <small>| Yandex.Market</small>
           </p>
-          <p class="text-sm">40min | RU
+          <p class="text-sm">40min | EN
             <span class="talk-place">Green Stage</span>
           </p>
         </li>
@@ -919,10 +919,11 @@
           </p>
         </li>
         <li class="third-stream">
-          <h3><span class="schedule-time">16:10</span> TBD
+          <h3><span class="schedule-time">16:10</span><a href="speakers/maksim-yuzva.html">Воркшоп. Часть 1: Строим PDP
+            на основе гайдa по front-end разработчику</a>
           </h3>
-          <p class="text-sm">
-            <small>| </small>
+          <p class="text-sm">Maksim Yuzva
+            <small>| EPAM</small>
           </p>
           <p class="text-sm">40min | RU
             <span class="talk-place">Blue Stage</span>
@@ -943,7 +944,7 @@
           </p>
         </li>
         <li class="second-stream">
-          <h3><span class="schedule-time">16:10</span><a href="speakers/venkat-dinavahi.html">Distributed Architectures
+          <h3><span class="schedule-time">17:10</span><a href="speakers/venkat-dinavahi.html">Distributed Architectures
             for Distributed Teams</a></h3>
           <p class="text-sm">Venkat Dinavahi
             <small>| Turtle Inc</small>
@@ -952,7 +953,17 @@
             <span class="talk-place">Green Stage</span>
           </p>
         </li>
-        <li class="third-stream"></li>
+        <li class="third-stream">
+          <h3><span class="schedule-time">17:10</span> <a href="speakers/maksim-yuzva.html">Воркшоп. Часть 2: Строим PDP
+            на основе гайдa по front-end разработчику</a>
+          </h3>
+          <p class="text-sm">Maksim Yuzva
+            <small>| EPAM</small>
+          </p>
+          <p class="text-sm">40min | RU
+            <span class="talk-place">Blue Stage</span>
+          </p>
+        </li>
 
       </ul>
     </div>
