--- a/app/speakers.html
+++ b/app/speakers.html
@@ -814,6 +814,18 @@
         </li>
         <li>
           <figure>
+            <img src="images/speakers/maksim-yuzva.jpg" alt="Maksim Yuzva photo">
+            <figcaption>
+              <span class="speaker-company">EPAM</span>
+              <h3><a href="speakers/maksim-yuzva.html">Maksim Yuzva</a></h3>
+              <p>
+                <small>Minsk, Belarus</small>
+              </p>
+            </figcaption>
+          </figure>
+        </li>
+        <li>
+          <figure>
             <img src="images/speakers/nikita-zenchenko.jpg" alt="Nikita Zenchenko photo">
             <figcaption>
               <span class="speaker-company">EPAM</span>
