upd: info about Nikita Sidorov

--- a/app/schedule.html
+++ b/app/schedule.html
@@ -507,12 +507,11 @@
           </p>
         </li>
         <li class="second-stream">
-          <h3><span class="schedule-time">11:00</span><a href="speakers/nikita-sidorov.html"> Как не писать код самому:
-            делегируем наши проблемы AST</a></h3>
+          <h3><span class="schedule-time">11:00</span><a href="speakers/nikita-sidorov.html"> Don’t (re)write code. Let AST do it</a></h3>
           <p class="text-sm">Никита Сидоров
             <small>| Yandex</small>
           </p>
-          <p class="text-sm">30min | RU
+          <p class="text-sm">30min | EN
             <span class="talk-place">Green Stage</span>
           </p>
         </li>
