--- a/app/speakers.html
+++ b/app/speakers.html
@@ -339,7 +339,7 @@
               <span class="speaker-company">Yandex</span>
               <h3><a href="speakers/nikita-sidorov.html">Nikita Sidorov</a></h3>
               <p>
-                <small> Moscow, Russia</small>
+                <small>Nizhny Novgorod</small>
               </p>
             </figcaption>
           </figure>
