upd: agenda timing

--- a/app/mobile.html
+++ b/app/mobile.html
@@ -370,12 +370,12 @@
         </li>
 
         <li class="first-stream">
-          <h3><span class="schedule-time">11:10</span> <a href="speakers/dmitriy-movchan.html">Автотесты под Android -
+          <h3><span class="schedule-time">11:00</span> <a href="speakers/dmitriy-movchan.html">Автотесты под Android -
             так ли это просто?</a></h3>
           <p class="text-sm">Dmitriy Movchan
-            <small>| KasperskyLab</small>
+            <small>| Revolut</small>
           </p>
-          <p class="text-sm">50min | RU
+          <p class="text-sm">40min | RU
             <span class="talk-place">Green Stage</span>
           </p>
           <p class="text-sm">
@@ -383,13 +383,13 @@
           </p>
         </li>
         <li class="second-stream">
-          <h3><span class="schedule-time">11:10</span>
+          <h3><span class="schedule-time">11:00</span>
             <a href="speakers/danis-tazetdinov.html">Augmenting Reality</a>
           </h3>
           <p class="text-sm">Danis Tazetdinov
             <small>| EPAM</small>
           </p>
-          <p class="text-sm">50min | RU
+          <p class="text-sm">40min | RU
             <span class="talk-place">Blue Stage</span>
           </p>
           <p class="text-sm">
@@ -398,11 +398,11 @@
         </li>
 
         <li class="first-stream">
-          <h3><span class="schedule-time">12:20</span><a href="speakers/alexander-blinov.html"> Молчание джунов</a></h3>
+          <h3><span class="schedule-time">12:00</span><a href="speakers/alexander-blinov.html"> Молчание джунов</a></h3>
           <p class="text-sm">Alexander Blinov
             <small>| Headhunter</small>
           </p>
-          <p class="text-sm">50min | RU
+          <p class="text-sm">40min | RU
             <span class="talk-place">Green Stage</span>
           </p>
           <p class="text-sm">
@@ -410,12 +410,12 @@
           </p>
         </li>
         <li class="second-stream">
-          <h3><span class="schedule-time">12:20</span><a href="speakers/anastasiia-voitova.html"> 10 lines of
+          <h3><span class="schedule-time">12:00</span><a href="speakers/anastasiia-voitova.html"> 10 lines of
             encryption, 1500 lines of key management</a></h3>
           <p class="text-sm">Anastasiia Voitova
             <small>| Cossack Labs</small>
           </p>
-          <p class="text-sm">50min | EN
+          <p class="text-sm">40min | EN
             <span class="talk-place">Blue Stage</span>
           </p>
           <p class="text-sm">
@@ -423,17 +423,17 @@
           </p>
         </li>
         <li>
-          <h3><span class="schedule-time">13:10</span> Lunch break | 60min</h3>
+          <h3><span class="schedule-time">13:00</span> Lunch break | 60min</h3>
         </li>
 
         <li class="first-stream">
-          <h3><span class="schedule-time">14:10</span><a href="speakers/elaine-dias-batista.html">Building Voice-First
+          <h3><span class="schedule-time">14:00</span><a href="speakers/elaine-dias-batista.html">Building Voice-First
             Android Apps</a>
           </h3>
           <p class="text-sm">Elaine Dias Batista
             <small>| SFEIR</small>
           </p>
-          <p class="text-sm">50min | EN
+          <p class="text-sm">40min | EN
             <span class="talk-place">Green Stage</span>
           </p>
           <p class="text-sm">
@@ -441,13 +441,13 @@
           </p>
         </li>
         <li class="second-stream">
-          <h3><span class="schedule-time">14:10</span><a href="speakers/muhammed-salih-guler.html">Animations in
+          <h3><span class="schedule-time">14:00</span><a href="speakers/muhammed-salih-guler.html">Animations in
             Flutter</a>
           </h3>
           <p class="text-sm">Muhammed Salih Guler
             <small>| Onefootball GmbH</small>
           </p>
-          <p class="text-sm">50min | EN
+          <p class="text-sm">40min | EN
             <span class="talk-place">Blue Stage</span>
           </p>
           <p class="text-sm">
@@ -455,13 +455,13 @@
           </p>
         </li>
         <li class="first-stream">
-          <h3><span class="schedule-time">15:20</span><a href="speakers/pavel-strelchenko.html">Фантастические плагины и
+          <h3><span class="schedule-time">15:00</span><a href="speakers/pavel-strelchenko.html">Фантастические плагины и
             где они обитают</a>
           </h3>
           <p class="text-sm">Pavel Strelchenko
             <small>| Headhunter</small>
           </p>
-          <p class="text-sm">50min | RU
+          <p class="text-sm">40min | RU
             <span class="talk-place">Green Stage</span>
           </p>
           <p class="text-sm">
@@ -469,13 +469,13 @@
           </p>
         </li>
         <li class="second-stream">
-          <h3><span class="schedule-time">15:20</span><a href="speakers/aleksandr-denisov.html">How to cook Flutter
+          <h3><span class="schedule-time">15:00</span><a href="speakers/aleksandr-denisov.html">How to cook Flutter
             correctly</a>
           </h3>
           <p class="text-sm">Aleksandr Denisov
             <small>| EPAM</small>
           </p>
-          <p class="text-sm">50min | EN
+          <p class="text-sm">40min | EN
             <span class="talk-place">Blue Stage</span>
           </p>
           <p class="text-sm">
@@ -483,13 +483,13 @@
           </p>
         </li>
         <li class="first-stream">
-          <h3><span class="schedule-time">16:30</span><a href="speakers/alexey-bykov.html">UX как область
+          <h3><span class="schedule-time">16:00</span><a href="speakers/alexey-bykov.html">UX как область
             ответственности мобильного разработчика</a>
           </h3>
           <p class="text-sm">Alexey Bykov
             <small>| Revolut</small>
           </p>
-          <p class="text-sm">50min | RU
+          <p class="text-sm">40min | RU
             <span class="talk-place">Green Stage</span>
           </p>
           <p class="text-sm">
@@ -497,12 +497,12 @@
           </p>
         </li>
         <li class="second-stream">
-          <h3><span class="schedule-time">16:30</span> <a href="speakers/max-nikulin.html">Строим видеоредактор для
+          <h3><span class="schedule-time">16:00</span> <a href="speakers/max-nikulin.html">Строим видеоредактор для
             iOS</a></h3>
           <p class="text-sm">Max Nikulin
             <small>| Movavi</small>
           </p>
-          <p class="text-sm">50min | RU
+          <p class="text-sm">40min | RU
             <span class="talk-place">Blue Stage</span>
           </p>
           <p class="text-sm">
@@ -511,12 +511,12 @@
         </li>
 
         <li class="first-stream">
-          <h3><span class="schedule-time">17:40</span><a href="speakers/yonatan-levin.html">Modern Android Development
+          <h3><span class="schedule-time">17:00</span><a href="speakers/yonatan-levin.html">Modern Android Development
             in Production</a></h3>
           <p class="text-sm">Yonatan Levin
             <small>| monday.com</small>
           </p>
-          <p class="text-sm">50min | EN
+          <p class="text-sm">40min | EN
             <span class="talk-place">Green Stage</span>
           </p>
           <p class="text-sm">
@@ -524,13 +524,13 @@
           </p>
         </li>
         <li class="second-stream">
-          <h3><span class="schedule-time">17:40</span> <a href="speakers/mateusz-szklarek.html">MVVM as good
+          <h3><span class="schedule-time">17:00</span> <a href="speakers/mateusz-szklarek.html">MVVM as good
             (anti)pattern in iOS</a>
           </h3>
           <p class="text-sm">Mateusz Szklarek
             <small>| EL Passion</small>
           </p>
-          <p class="text-sm">50min | EN
+          <p class="text-sm">40min | EN
             <span class="talk-place">Blue Stage</span>
           </p>
           <p class="text-sm">
@@ -538,7 +538,7 @@
           </p>
         </li>
         <li>
-          <h3><span class="schedule-time">18:30</span> Closing speech</h3>
+          <h3><span class="schedule-time">17:40</span> Closing speech</h3>
           <p class="text-sm">"Mobile People" Crew</p>
           <p class="text-sm">20min | RU
             <span class="talk-place">Green Stage</span>
