add speaker: Ihar Yukhnevich

--- a/app/schedule.html
+++ b/app/schedule.html
@@ -468,8 +468,8 @@
           </p>
         </li>
         <li>
-          <h3><span class="schedule-time">19:00</span>TBD
-
+          <h3><span class="schedule-time">19:00</span> <a href="speakers/ihar-yukhnevich.html">Принт умер. Да
+            здравствует принт!</a>
           </h3>
           <p class="text-sm">Ihar Yukhnevich
             <small>| Yukhnevich.com</small>
@@ -507,7 +507,8 @@
           </p>
         </li>
         <li class="second-stream">
-          <h3><span class="schedule-time">10:20</span><a href="speakers/nikita-sidorov.html"> Don’t (re)write code. Let AST do it</a></h3>
+          <h3><span class="schedule-time">10:20</span><a href="speakers/nikita-sidorov.html"> Don’t (re)write code. Let
+            AST do it</a></h3>
           <p class="text-sm">Никита Сидоров
             <small>| Yandex</small>
           </p>
