--- a/app/speakers.html
+++ b/app/speakers.html
@@ -847,6 +847,19 @@
             </figcaption>
           </figure>
         </li>
+
+        <li>
+          <figure>
+            <img src="images/speakers/ihar-yukhnevich.jpg" alt="Ihar Yukhnevich photo">
+            <figcaption>
+              <span class="speaker-company"></span>
+              <h3><a href="speakers/ihar-yukhnevich.html">Ihar Yukhnevich</a></h3>
+              <p>
+                <small>Minsk, Belarus</small>
+              </p>
+            </figcaption>
+          </figure>
+        </li>
       </ul>
     </div>
   </section>
