upd: design day schedule

--- a/app/schedule.html
+++ b/app/schedule.html
@@ -366,26 +366,20 @@
         <li>
           <h3><span class="schedule-time">9:00</span> Registration</h3>
         </li>
-        <!--              <li>-->
-        <!--                <h3><span class="schedule-time">10:00</span> Opening. Welcome speech from conference-->
-        <!--                  organizers-->
-        <!--                </h3>-->
-        <!--                <p class="text-sm">DesignSpot Crew</p>-->
-        <!--                <p class="text-sm">30min | RU-->
-        <!--                  <span class="talk-place">Red Stage</span>-->
-        <!--                </p>-->
-        <!--              </li>-->
+
         <li>
-          <h3><span class="schedule-time">10:00</span><a href="speakers/george-kvasnikov.html">Креативность начинается с
-            незнания</a>
+          <h3><span class="schedule-time">10:00</span><a href="speakers/nikita-zenchenko.html">Сколько стоит обучение в
+            бесплатной школе DesignSpot
+            School?</a>
           </h3>
-          <p class="text-sm">George Kvasnikov
-            <small>| Fantasy</small>
+          <p class="text-sm">Nikita Zenchenko
+            <small>| EPAM</small>
           </p>
           <p class="text-sm">60min | RU
             <span class="talk-place">Red Stage</span>
           </p>
         </li>
+
         <li>
           <h3><span class="schedule-time">11:00</span><a href="speakers/sergey-kireev.html">Все дизайнеры —
             популисты</a>
@@ -397,8 +391,24 @@
             <span class="talk-place">Red Stage</span>
           </p>
         </li>
+
         <li>
-          <h3><span class="schedule-time">12:00</span><a href="speakers/pavel-kedich.html">Другой веб</a>
+          <h3><span class="schedule-time">12:00</span><a href="speakers/george-kvasnikov.html">Креативность начинается с
+            незнания</a>
+          </h3>
+          <p class="text-sm">George Kvasnikov
+            <small>| Fantasy</small>
+          </p>
+          <p class="text-sm">60min | RU
+            <span class="talk-place">Red Stage</span>
+          </p>
+        </li>
+        <li>
+          <h3><span class="schedule-time">13:00</span> Lunch break </h3>
+        </li>
+
+        <li>
+          <h3><span class="schedule-time">14:00</span><a href="speakers/pavel-kedich.html">Другой веб</a>
           </h3>
           <p class="text-sm">Pavel Kedich
             <small>| Readymag</small>
@@ -408,28 +418,13 @@
           </p>
         </li>
         <li>
-          <h3><span class="schedule-time">13:00</span> Lunch break | 60min</h3>
-        </li>
-        <li>
-          <h3><span class="schedule-time">14:00</span><a href="speakers/denis-trusilo.html">Видеопродакшен без
-            комплексов: Почему красивые ролики снимать бессмысленно</a>
+          <h3><span class="schedule-time">15:00</span><a href="speakers/hanna-babitskaya.html">«Сундук позора» или как
+            развиваться за счёт неудачных работ</a>
           </h3>
-          <p class="text-sm">Denis Trusilo
-            <small>| Pocket Rocket</small>
+          <p class="text-sm">Hanna Babitskaya
+            <small>| Wargaming</small>
           </p>
-          <p class="text-sm">60min | RU
-            <span class="talk-place">Red Stage</span>
-          </p>
-        </li>
-        <li>
-          <h3><span class="schedule-time">15:00</span><a href="speakers/nikita-zenchenko.html">Сколько стоит обучение в
-            бесплатной школе DesignSpot
-            School?</a>
-          </h3>
-          <p class="text-sm">Nikita Zenchenko
-            <small>| EPAM</small>
-          </p>
-          <p class="text-sm">60min | RU
+          <p class="text-sm">50min | RU
             <span class="talk-place">Red Stage</span>
           </p>
         </li>
@@ -445,23 +440,23 @@
           </p>
         </li>
         <li>
-          <h3><span class="schedule-time">17:00</span><a href="speakers/mitya-osadchuk.html">Генеративный дизайн:
-            инструменты дизайнера
-            будущего</a>
+          <h3><span class="schedule-time">17:00</span><a href="speakers/denis-trusilo.html">Видеопродакшен без
+            комплексов: Почему красивые ролики снимать бессмысленно</a>
           </h3>
-          <p class="text-sm">Mitya Osadchuk
-            <small>| Mail.ru</small>
+          <p class="text-sm">Denis Trusilo
+            <small>| Pocket Rocket</small>
           </p>
           <p class="text-sm">60min | RU
             <span class="talk-place">Red Stage</span>
           </p>
         </li>
         <li>
-          <h3><span class="schedule-time">18:00</span><a href="speakers/hanna-babitskaya.html">«Сундук позора» или как
-            развиваться за счёт неудачных работ</a>
+          <h3><span class="schedule-time">18:00</span><a href="speakers/mitya-osadchuk.html">Генеративный дизайн:
+            инструменты дизайнера
+            будущего</a>
           </h3>
-          <p class="text-sm">Hanna Babitskaya
-            <small>| Wargaming</small>
+          <p class="text-sm">Mitya Osadchuk
+            <small>| Mail.ru</small>
           </p>
           <p class="text-sm">60min | RU
             <span class="talk-place">Red Stage</span>
