--- a/app/schedule.html
+++ b/app/schedule.html
@@ -435,7 +435,7 @@
           <p class="text-sm">Alexander Nelidkin
             <small>| AIC</small>
           </p>
-          <p class="text-sm">60min | EN
+          <p class="text-sm">60min | RU
             <span class="talk-place">Red Stage</span>
           </p>
         </li>
