--- a/app/speakers.html
+++ b/app/speakers.html
@@ -242,7 +242,7 @@
             </figcaption>
           </figure>
         </li>
-        
+
         <li>
           <figure>
             <img src="images/speakers/irina-levina.jpg" alt="Irina Levina photo">
@@ -844,6 +844,19 @@
               <h3><a href="speakers/ihar-yukhnevich.html">Ihar Yukhnevich</a></h3>
               <p>
                 <small>Minsk, Belarus</small>
+              </p>
+            </figcaption>
+          </figure>
+        </li>
+
+        <li>
+          <figure>
+            <img src="images/speakers/vitali-lashchanka.jpg" alt="Vitali Lashchanka photo">
+            <figcaption>
+              <span class="speaker-company">Evolution Gaming</span>
+              <h3><a href="speakers/vitali-lashchanka.html">Vitali Lashchanka</a></h3>
+              <p>
+                <small> Riga, Latvia</small>
               </p>
             </figcaption>
           </figure>
