--- a/app/schedule.html
+++ b/app/schedule.html
@@ -746,17 +746,25 @@
           </p>
         </li>
         <li class="second-stream">
-          <h3><span class="schedule-time">11:00</span><a href="speakers/pablo-birukov.html"> JavaScript that scales
+          <h3><span class="schedule-time">17:00</span><a href="speakers/alexander-gerasimov.html">"No Foul Play"
+            Describing State with Dependently Typed FSMs</a></h3>
+          <p class="text-sm">Alex Gerasimov
+            <small>| wix.com</small>
+          </p>
+          <p class="text-sm">40min | EN
+            <span class="talk-place">Blue Stage</span>
+          </p>
+        </li>
+        <li class="third-stream">
+          <h3><span class="schedule-time">11:00</span><a href="speakers/vitali-lashchanka.html"> Fail Fast approach in
+            Frontend Development
           </a></h3>
-          <p class="text-sm">Pablo Birukov
+          <p class="text-sm">Vitali Lashchanka
             <small>| Evolution Gaming</small>
           </p>
           <p class="text-sm">30min | EN
             <span class="talk-place">Green Stage</span>
           </p>
-        </li>
-        <li class="third-stream">
-
         </li>
 
         <li class="first-stream">
@@ -793,12 +801,11 @@
             <span class="talk-place">Red Stage</span>
           </p>
         </li>
-        </li>
         <li class="second-stream">
-          <h3><span class="schedule-time">13:00</span><a href="speakers/kirill-knysh.html">Convert your React
-            application to API</a></h3>
-          <p class="text-sm">Kirill Knysh
-            <small>| Uber</small>
+          <h3><span class="schedule-time">13:00</span><a href="speakers/pablo-birukov.html"> JavaScript that scales
+          </a></h3>
+          <p class="text-sm">Pablo Birukov
+            <small>| Evolution Gaming</small>
           </p>
           <p class="text-sm">30min | EN
             <span class="talk-place">Green Stage</span>
@@ -809,7 +816,7 @@
         </li>
 
         <li>
-          <h3><span class="schedule-time">14:00</span> Lunch break | 90min</h3>
+          <h3><span class="schedule-time">14:00</span> Lunch break | 60min</h3>
         </li>
 
         <li class="first-stream">
@@ -873,13 +880,14 @@
             <span class="talk-place">Blue Stage</span>
           </p>
         </li>
+
         <li class="first-stream">
-          <h3><span class="schedule-time">17:00</span><a href="speakers/alexander-gerasimov.html">"No Foul Play"
-            Describing State with Dependently Typed FSMs</a></h3>
-          <p class="text-sm">Alex Gerasimov
-            <small>| wix.com</small>
+          <h3><span class="schedule-time">17:00</span><a href="speakers/kirill-knysh.html">Convert your React
+            application to API</a></h3>
+          <p class="text-sm">Kirill Knysh
+            <small>| Uber</small>
           </p>
-          <p class="text-sm">40min | EN
+          <p class="text-sm">30min | EN
             <span class="talk-place">Red Stage</span>
           </p>
         </li>
