fix: stage for Vitali Lashchanka

--- a/app/schedule.html
+++ b/app/schedule.html
@@ -599,7 +599,7 @@
             <small>| Evolution Gaming</small>
           </p>
           <p class="text-sm">30min | EN
-            <span class="talk-place">Blue Stage</span>
+            <span class="talk-place">Green Stage</span>
           </p>
         </li>
         <li class="third-stream">
