add: problog to info partners

--- a/app/mobile.html
+++ b/app/mobile.html
@@ -766,6 +766,11 @@
             <img src="images/partners/logo-frontenddev.png" alt="frontenddev logo"/>
           </a>
         </li>
+        <li>
+          <a target="_blank" href="https://www.youtube.com/progblog">
+            <img src="images/partners/logo-ProgBlog.png" alt="ProgBlog logo"/>
+          </a>
+        </li>
       </ul>
       <h2>Swag Partners</h2>
       <ul class="partner-list">
