--- a/app/schedule.html
+++ b/app/schedule.html
@@ -633,15 +633,15 @@
             <small>| EPAM</small>
           </p>
           <p class="text-sm">30min | EN
-            <span class="talk-place">Blue Stage</span>
+            <span class="talk-place">Green Stage</span>
           </p>
         </li>
         <li class="third-stream">
-          <h3><span class="schedule-time">15:00</span><a href="speakers/maksim-yuzva.html">Панельная дискуссия: Гайд по
-            front-end разработчику, патч 2019</a></h3>
-          <p class="text-sm">Moderator: Maksim Yuzva
+          <h3><span class="schedule-time">17:00</span><a href="speakers/itbeard.html">Engineer: Hard Skills vs Soft Skills.</a></h3>
+          <p class="text-sm">Лекс АйТиБорода
+            <small>| АйТиБорода</small>
           </p>
-          <p class="text-sm">30min | EN
+          <p class="text-sm">50min | RU
             <span class="talk-place">Blue Stage</span>
           </p>
         </li>
@@ -666,11 +666,10 @@
           </p>
         </li>
         <li class="third-stream">
-          <h3><span class="schedule-time">16:00</span><a href="speakers/maksim-yuzva.html">Панельная дискуссия: Гайд по
-            front-end разработчику, патч 2019</a></h3>
-          <p class="text-sm">Moderator: Maksim Yuzva
-          </p>
-          <p class="text-sm">40min | EN
+          <h3><span class="schedule-time">16:00</span><a href="speakers/dzianis-sheka.html">Panel Discussion: Future
+            after matureness</a></h3>
+          <p class="text-sm">Moderator: Dzianis Sheka</p>
+          <p class="text-sm">40min | RU
             <span class="talk-place">Blue Stage</span>
           </p>
         </li>
@@ -696,9 +695,8 @@
           </p>
         </li>
         <li class="third-stream">
-          <h3><span class="schedule-time">17:00</span><a href="speakers/dzianis-sheka.html">Panel Discussion: Future
-            after matureness</a></h3>
-          <p class="text-sm">Moderator: Dzianis Sheka</p>
+          <h3><span class="schedule-time">17:00</span>Q&A with RS Crew</h3>
+          <p class="text-sm"></p>
           <p class="text-sm">40min | RU
             <span class="talk-place">Blue Stage</span>
           </p>
@@ -782,7 +780,13 @@
           </p>
         </li>
         <li class="third-stream">
-
+          <h3><span class="schedule-time">12:00</span><a href="speakers/maksim-yuzva.html">Панельная дискуссия: Гайд по
+            front-end разработчику, патч 2019</a></h3>
+          <p class="text-sm">Moderator: Maksim Yuzva
+          </p>
+          <p class="text-sm">40min | RU
+            <span class="talk-place">Blue Stage</span>
+          </p>
         </li>
 
         <li class="first-stream">
@@ -806,7 +810,13 @@
           </p>
         </li>
         <li class="third-stream">
-
+          <h3><span class="schedule-time">13:00</span><a href="speakers/maksim-yuzva.html">Панельная дискуссия: Гайд по
+            front-end разработчику, патч 2019</a></h3>
+          <p class="text-sm">Moderator: Maksim Yuzva
+          </p>
+          <p class="text-sm">30min | RU
+            <span class="talk-place">Blue Stage</span>
+          </p>
         </li>
 
         <li>
