--- a/app/schedule.html
+++ b/app/schedule.html
@@ -637,11 +637,12 @@
           </p>
         </li>
         <li class="third-stream">
-          <h3><span class="schedule-time">17:00</span><a href="speakers/itbeard.html">Engineer: Hard Skills vs Soft Skills.</a></h3>
-          <p class="text-sm">Лекс АйТиБорода
-            <small>| АйТиБорода</small>
+          <h3><span class="schedule-time">15:00</span><a href="speakers/anton-bely.html">Angular + Redux ... stop,
+            what?</a></h3>
+          <p class="text-sm">Anton Bely
+            <small>| Yandex</small>
           </p>
-          <p class="text-sm">50min | RU
+          <p class="text-sm">30min | RU
             <span class="talk-place">Blue Stage</span>
           </p>
         </li>
@@ -685,21 +686,20 @@
           </p>
         </li>
         <li class="second-stream">
-          <h3><span class="schedule-time">17:00</span><a href="speakers/anton-bely.html">Angular + Redux ... stop,
-            what?</a></h3>
-          <p class="text-sm">Anton Bely
-            <small>| Yandex</small>
+          <h3><span class="schedule-time">17:00</span><a href="speakers/itbeard.html">Engineer: Hard Skills vs Soft Skills.</a></h3>
+          <p class="text-sm">Лекс АйТиБорода
+            <small>| АйТиБорода</small>
           </p>
-          <p class="text-sm">30min | RU
-            <span class="talk-place">Green Stage</span>
+          <p class="text-sm">50min | RU
+            <span class="talk-place">Blue Stage</span>
           </p>
         </li>
         <li class="third-stream">
-          <h3><span class="schedule-time">17:00</span>Q&A with RS Crew</h3>
-          <p class="text-sm"></p>
-          <p class="text-sm">40min | RU
-            <span class="talk-place">Blue Stage</span>
-          </p>
+<!--          <h3><span class="schedule-time">17:00</span>Q&A with RS Crew</h3>-->
+<!--          <p class="text-sm"></p>-->
+<!--          <p class="text-sm">40min | RU-->
+<!--            <span class="talk-place">Blue Stage</span>-->
+<!--          </p>-->
         </li>
 
 
