add: itbeard to speakers

--- a/app/speakers.html
+++ b/app/speakers.html
@@ -849,6 +849,19 @@
             </figcaption>
           </figure>
         </li>
+
+        <li>
+          <figure>
+            <img src="images/speakers/it-boroda.jpg" alt="Лекс АйТиБорода photo">
+            <figcaption>
+              <span class="speaker-company">"АйТиБорода"</span>
+              <h3><a href="speakers/itbeard.html">Лекс АйТиБорода</a></h3>
+              <p>
+                <small>Minsk, Belarus</small>
+              </p>
+            </figcaption>
+          </figure>
+        </li>
       </ul>
     </div>
   </section>
