add speaker: Vladimir Panteleev

--- a/app/speakers.html
+++ b/app/speakers.html
@@ -862,6 +862,19 @@
             </figcaption>
           </figure>
         </li>
+
+        <li>
+          <figure>
+            <img src="images/speakers/vladimir-panteleev.jpg" alt="Vladimir Panteleev photo">
+            <figcaption>
+              <span class="speaker-company">Paralect</span>
+              <h3><a href="speakers/vladimir-panteleev.html">Vladimir Panteleev</a></h3>
+              <p>
+                <small>Minsk, Belarus</small>
+              </p>
+            </figcaption>
+          </figure>
+        </li>
       </ul>
     </div>
   </section>
