add panteleev to schedule

--- a/app/schedule.html
+++ b/app/schedule.html
@@ -746,7 +746,7 @@
           </p>
         </li>
         <li class="second-stream">
-          <h3><span class="schedule-time">17:00</span><a href="speakers/alexander-gerasimov.html">"No Foul Play"
+          <h3><span class="schedule-time">11:00</span><a href="speakers/alexander-gerasimov.html">"No Foul Play"
             Describing State with Dependently Typed FSMs</a></h3>
           <p class="text-sm">Alex Gerasimov
             <small>| wix.com</small>
@@ -756,7 +756,12 @@
           </p>
         </li>
         <li class="third-stream">
-
+          <h3><span class="schedule-time">11:00</span><a href="speakers/vladimir-panteleev.html">TBD</a></h3>
+          <p class="text-sm">Vladimir Panteleev
+          </p>
+          <p class="text-sm">40min | RU
+            <span class="talk-place">Blue Stage</span>
+          </p>
         </li>
 
         <li class="first-stream">
