upd: Vladimir Panteleev talk

--- a/app/schedule.html
+++ b/app/schedule.html
@@ -695,11 +695,12 @@
           </p>
         </li>
         <li class="third-stream">
-<!--          <h3><span class="schedule-time">17:00</span>Q&A with RS Crew</h3>-->
-<!--          <p class="text-sm"></p>-->
-<!--          <p class="text-sm">40min | RU-->
-<!--            <span class="talk-place">Blue Stage</span>-->
-<!--          </p>-->
+          <h3><span class="schedule-time">11:00</span><a href="speakers/vladimir-panteleev.html">Черная книга скрам</a></h3>
+          <p class="text-sm">Vladimir Panteleev
+          </p>
+          <p class="text-sm">40min | RU
+            <span class="talk-place">Blue Stage</span>
+          </p>
         </li>
 
 
@@ -756,12 +757,7 @@
           </p>
         </li>
         <li class="third-stream">
-          <h3><span class="schedule-time">11:00</span><a href="speakers/vladimir-panteleev.html">TBD</a></h3>
-          <p class="text-sm">Vladimir Panteleev
-          </p>
-          <p class="text-sm">40min | RU
-            <span class="talk-place">Blue Stage</span>
-          </p>
+
         </li>
 
         <li class="first-stream">
